<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我爱我车</string>
    <string name="hello_world">Hello world!</string>
    <string name="system_note">系统提示</string>
    <string name="note">提示</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="content_null">内容不能为空</string>
    <string name="save">完成</string>
	
    <string name="car_circle">车友圈</string>
    <string name="new_article_title">发车友圈</string>
    <string name="car_remind">车务提醒</string>
    <string name="my_car">我的爱车</string>
    <string name="illegal_city">违章城市</string>
    <string name="my_terminal">我的终端</string>
    <string name="my_orders">我的订单</string>
    <string name="my_collect">我的收藏</string>
    <string name="setup_center">设置中心</string>
    <string name="menu">菜单</string>
    <string name="home">主页</string>
    <string name="vehicle_status">爱车车况</string>
    <string name="traffic">车辆违章</string>
    <string name="shareLocation">位置分享</string>
    <!-- 欢迎界面-->
    <string name="set_network">设置网络</string>
    <string name="network_error">网络连接不可用,请检查网络设置.</string>
    <string name="vehicle_edit">编辑</string>
    <!-- 我的爱车 -->
    <string name="base_information">基本资料</string>
    <string name="brand">品牌</string>
    <string name="model">车型</string>
    <string name="car_number">车牌号</string>
    <string name="vehicle_style">车款</string>
    <string name="cloud_terminal">OBD云终端</string>
    <string name="against_rules">违章查询</string>
    <string name="traffic_department">车务提醒</string>
    <string name="engine_number">发动机号</string>
    <string name="vehicle_reg_num">登记证号</string>
    <string name="vehicle_number">车架号</string>
    <string name="insurance_company">保险公司</string>
    <string name="insurance_company_tel">保险公司电话</string>
    <string name="insurance_time">保险时间到期</string>
    <string name="maintain_shop">4S保养店</string>
    <string name="maintain_shop_tel">4S保养店电话</string>
    <string name="current_mileage">当前里程</string>
    <string name="last_insurance_mileage">最后保养里程</string>
    <string name="last_insurance_time">最后保养时间</string>
    <string name="select_city">所在城市</string>
    <string name="shopping_time">购车时间</string>
    <string name="delete_vehicle">删除当前车辆</string>
    <string name="delete">删除</string>
    <string name="exit">退出</string>
    
    <string name="add_car">添加爱车</string>
    <string name="choice_brank">选择品牌</string>
    <string name="choice_series">选择车型</string>
    <string name="choice_type">选择车款</string>
    <!-- 车辆行程地图 -->
    <string name="travel_map_urrent">地图截取中</string>
    <!-- 我的收藏 -->
    <string name="my_collection">我的收藏</string>
    <!-- 车务提醒 -->
    <string name="update_date">修改时间</string>
    <string name="deal_adress">处理地点</string>
    <string name="call_insurance">拨打保险公司电话</string>
    <string name="call_fours">拨打4S店电话</string>
    <string name="go_my_car">去我的爱车设置</string>
    <string name="inspection">车辆年检提醒</string>
    <string name="inspection_title">车辆年检</string>
    <string name="inspection_content">(需于%s前年检)</string>
    <string name="renewal">车辆续保提醒</string>
    <string name="renewal_content">(需于%s前续保)</string>
    <string name="maintenance">车辆保养提醒</string>
    <string name="maintenance_content">(离下次保养还有%skm)</string>
    <string name="examined">驾照年审提醒</string>
    <string name="examined_title">驾照年审</string>
    <string name="examined_content">(需于%s前年审)</string>
    <string name="replacement">驾照换证提醒</string>
    <string name="replacement_title">驾照换证</string>
    <string name="replacement_content">(需于%s前换证)</string>
    <!-- 设置中心 -->
    
    <string name="search_setting">搜索设置</string>
    <string name="default_center">默认中心点</string>
    <string name="push_setting">推送设置</string>
    <string name="against_push">违章推送</string>
    <string name="system_setting">系统相关</string>
    <string name="bug_push">故障推送</string>
    <string name="share_gift">分享有礼</string>
    <string name="feedbaack">意见反馈</string>
    <string name="give_us_score">给我们评分</string>
    <string name="about_appliaction">关于我爱我车</string>
    
    <string name="send_suggest">发送</string>
    <string name="my_account">我的账户</string>
    <string name="consignee">收货人</string>
    <string name="address">地址</string>
    <string name="tel">电话</string>
    <string name="friend_information">好友资料</string>
    <string name="friend_vehicle">TA的爱车</string>
    <string name="friend_home">好友主页</string>
    <string name="article_detaile">文章详情</string>
    <string name="choice_insurance_company">保险公司</string>
    <string name="synchronization_mileage">同步里程</string>
    <string name="input_mileage">请输入仪表上面的里程</string>
    
    <!-- 车辆位置 -->
    <string name="find_car">寻车</string>
    <string name="travel">行程</string>
    <string name="periphery">周边</string>
    <string name="fence">围栏</string>
    <string name="oil_station">加油站</string>
    <string name="parking">停车场</string>
    <string name="four_s">4S店</string>
    <string name="specialist">专修店</string>
    <string name="automotive_beauty">汽车美容店</string>
    <string name="wash">洗车店</string>
    <!-- 搜索结果 -->
    <string name="search_result_not_found">抱歉，未找到结果</string>
    <string name="search_error">搜索出错啦..</string>

    <string name="search_result">搜索结果</string>
    <!-- 车辆位置 -->
    <string name="total_score">累计扣分: %s分</string>
    <string name="total_fine">累计罚款: %s元</string>
    <!--爱车车况-->
    <string name="month_hk_fuel">百公里油耗\n%sL</string>
    <string name="month_fuel">月总油耗\n%sL</string>
    <string name="month_distance">月行驶里程\n%sKM</string>
    <!-- 车辆行程 -->
    <string name="travels">车辆行程</string>
    <string name="distance">行驶总里程：%sKM</string>
    <string name="fuel">油耗：%sL</string>
    <string name="hk_fuel">百公里油耗：%sL</string>
    <string name="money">花费：%s元</string>
    <!-- 我的账户 -->
    <string name="contact_note">联系方式(用于购物发货)</string>
    <string name="login_out">注销</string>
    
    <string name="please_login">请登录</string>
    
    <string name="dialog_title">数据加载</string>
    <string name="dialog_message">加载中...</string>
    <string name="annual_survey">年检时间</string>
    <string name="mantain_last_time">最后保养时间</string>
    <string name="mantain_next_time">下次保养里程</string>
    <string name="publish_new_article">发送</string>
    <string name="add">添加我的爱车</string>
    <string name="want_to_do">请说出你想做什么</string>
    <string name="location_4s_shop">本地4s店</string>
    <string name="engine_num_hint">请输入发动机后</string>
    <string name="all_engine_num_hint">请输入全部发动机号</string>
    <string name="vehicle_num_hint">请输入车架号后</string>
    <string name="all_vehicle_num_hint">请输入全部车架号</string>
    <string name="register_num_hint">请输入登记证号后</string>
    <string name="all_register_num_hint">请输入全部登记证号</string>
    <string name="hint_wei">位</string>
    <string name="please_input_vehilce_num">请输入7位车牌号</string>
    <string name="please_choice_vehilce_brank">请选择品牌</string>
    <string name="please_choice_vehilce_models">请选择车型</string>
    <string name="please_input_vehilce_type">请选择车款</string>
    <string name="please_input_illegal_city">请选择违章城市</string>
    <string name="please_input_insurance_company">请选择保险公司</string>
    <string name="please_input_insurance_company_tel">请输入保险公司电话</string>
    <string name="please_choice_city">请选择城市</string>
    <string name="please_choice_vehicle_brank">请选择车辆品牌</string>
    <string name="please_input_insurance_time">请选择保险时间</string>
    
    <string name="please_input_insurance_over_time">请选择保险到期时间</string>
    <string name="please_input_4s">请选择4s保养店</string>
    <string name="please_input_4s_tel">请输入4s保养店电话</string>
    <string name="please_input_last_maintenance_milegal">请输入最后保养里程(Km)</string>
    <string name="please_input_last_maintenance_time">请选择最后保养时间</string>
    <string name="please_choice_by_time">请选择购车时间</string>
    <string name="point">提示</string>
    <string name="sure_delete_vehicle">确认删除车辆</string>
    <string name="petrol_grade">汽油标号</string>
    <string name="please_choice_petrol_grade">汽油标号</string>
    <string name="friend_car">他的爱车</string>
    <string name="friend_car_friend">他的车友圈</string>
    <string name="comments">评论</string>
    
    <string name="new_version">新功能即将上线，敬请关注。</string>
</resources>
