<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".VehicleStatusActivity" >

    <!-- 头部 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/my_vechile_menu"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/my_car"
            android:layout_weight="1"
            android:textSize="10pt" />

        <Button
            android:id="@+id/my_vechile_home"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/ic_launcher" />
    </LinearLayout>	
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
	<TableLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	   	android:background="#FFFFFF"
	    >
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <ImageView 
	            android:layout_height="fill_parent"
	            android:layout_width="wrap_content"
	            android:background="@drawable/ic_launcher"
	            android:layout_weight="1"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	            android:layout_width="wrap_content"
	            android:background="@drawable/ic_launcher"
	            android:layout_weight="1"
	            />
	        <ImageView 
	            android:id="@+id/add_car"
	            android:layout_height="fill_parent"
	            android:layout_width="wrap_content"
	            android:background="@drawable/ic_launcher"
	            android:layout_weight="1"
	            android:clickable="true"
	            />
	    </TableRow>
	    <!-- 基本资料 -->
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#ffffff"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="fill_parent"
	    		android:text="@string/base_information"
	    		android:textSize="10pt"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/car_number"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="粤B12345"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/brand"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="大众"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/model"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="途安"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/vehicle_style"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="自动豪华睿智版"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	        
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/cloud_terminal"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="未绑定终端"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    <!-- 违章查询 -->
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#ffffff"
	        >
	       <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="fill_parent"
	    		android:text="@string/against_rules"
	    		android:textSize="10pt"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/engine_number"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="123456"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/vehicle_number"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="123456"
	    		android:layout_weight="2"
	    		android:textSize="7pt"
	            />
	    </TableRow>
	    <!-- 车务提醒 -->
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#ffffff"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="fill_parent"
	    		android:text="@string/traffic_department"
	    		android:textSize="10pt"
	            />
	        
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/insurance_company"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="太平洋保险"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/insurance_time"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="2013年-2015年"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	        
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/maintain_shop"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="西丽大众4s店"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/current_mileage"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="46000Km"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <ImageView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:background="@drawable/image"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/last_insurance_mileage"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="46000Km"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/shopping_time"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	        <TextView 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="2009"
	    		android:layout_weight="1"
	    		android:textSize="7pt"
	            />
	    </TableRow>
	    <TableRow 
	        android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"
	    	android:background="#F0F0F0"
	        >
	        <Button 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:text="@string/save"
	    		android:layout_weight="1"
	            />
	        <Button 
	            android:layout_height="fill_parent"
	    		android:layout_width="wrap_content"
	    		android:layout_weight="1"
	    		android:text="@string/delete"
	            />
	    </TableRow>
	</TableLayout>
	</ScrollView>
</LinearLayout>