<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/tv_item_car_location_oil"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/oil_station"/>
        <TextView 
            android:id="@+id/tv_item_car_location_Parking"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/parking"/>
        <TextView 
            android:id="@+id/tv_item_car_location_4s"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/four_s"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/tv_item_car_location_specialist"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/specialist"/>
        <TextView 
            android:id="@+id/tv_item_car_location_automotive_beauty"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/automotive_beauty"/>
        <TextView 
            android:id="@+id/tv_item_car_location_wash"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border_bg"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            android:text="@string/wash"/>
    </LinearLayout>  
</LinearLayout>
