<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_activity_car_location_top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@drawable/nav_bg" >

        <ImageView
            android:id="@+id/iv_activity_car_location_back"
            android:layout_width="@dimen/title_image"
            android:layout_height="@dimen/title_image"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margins"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nav_back" />

        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/iv_activity_car_location_share"
            android:layout_toRightOf="@+id/iv_activity_car_location_back"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/head"/>

        <ImageView
            android:id="@+id/iv_activity_car_location_share"
            android:layout_width="@dimen/title_image"
            android:layout_height="@dimen/title_image"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margins"
            android:contentDescription="@string/app_name"
            android:src="@drawable/nav_share" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_activity_car_location_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/margins" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" >
            <Button
                android:id="@+id/bt_activity_car_location_findCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/tool_search"
                android:text="@string/find_car"
                android:textColor="@color/common"
                android:textSize="@dimen/main" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" >
            <Button
                android:id="@+id/bt_activity_car_location_travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/tool_route"
                android:text="@string/travel"
                android:textColor="@color/common"
                android:textSize="@dimen/main" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" >
            <Button
                android:id="@+id/bt_activity_car_location_periphery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/tool_rim"
                android:text="@string/periphery"
                android:textColor="@color/common"
                android:textSize="@dimen/main" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" >
            <Button
                android:id="@+id/bt_activity_car_location_fence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/tool_fence"
                android:text="@string/fence"
                android:textColor="@color/common"
                android:textSize="@dimen/main" />
        </LinearLayout>
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mv_car_location"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ll_activity_car_location_bottom"
        android:layout_below="@id/rl_activity_car_location_top"
        android:clickable="true" />

</RelativeLayout>